--- a/index.html
+++ b/index.html
@@ -15,13 +15,18 @@
 <body>
     <div class="container">
         <div class="row page2">
-            <div class="col-lg-12 " id="page01">
+            <div class="col-lg-12 " id="page1">
                 <button type="button" class="btn btn-primary btn-lg btn-block" id="start">Start</button>
             </div>
             <div class="row page2">
+                <div class="col-lg-12 " id="totallytrivialtrivia">
+                    <h1><b>Totally Trivial Trivia</b></h1>
+                </div>
+                <br>
                 <div class="col-lg-12 " id="timeremaining">
                     <h1><b>Time Remaining:</b></h1>
                 </div>
+                <br>
                 <div class="row page2">
                     <h1>1-Which city is the capital of Germany?</h1>
                     <label class="radio-inline">
@@ -97,12 +102,13 @@
                         <input name="radioGroup" id="radio3" value="option3" type="radio"> Views performed by Drake
                     </label>
                 </div>
+                <br>
                 <div class="row page2">
                     <div class="col-lg-12 " id="done">
                         <button type="button" class="btn btn-primary btn-lg btn-block" id="start">Done</button>
                     </div>
                 </div>
-                <div class="row" id="page03">
+                <div class="row" id="page3">
                     <div class="col-lg-12 " id="result">
                         <h1><b>All Done!</b></h1>
                         <div id="correctanswers">Correct Answers:</div>
