--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
     <div class="container">
-        <div class="row page2">
-            <div class="col-lg-12 " id="page1">
+        <div class="row ">
+            <div class="col-lg-12 page1" id="page1">
                 <button type="button" class="btn btn-primary btn-lg btn-block" id="start">Start</button>
             </div>
             <div class="row page2">
@@ -108,7 +108,9 @@
                         <button type="button" class="btn btn-primary btn-lg btn-block" id="start">Done</button>
                     </div>
                 </div>
-                <div class="row" id="page3">
+                
+            </div>
+            <div class="row page3" id="page3">
                     <div class="col-lg-12 " id="result">
                         <h1><b>All Done!</b></h1>
                         <div id="correctanswers">Correct Answers:</div>
@@ -117,7 +119,6 @@
                     </div>
                     <script type="text/javascript" src="assets/javascript/app.js"></script>
                 </div>
-            </div>
         </div>
     </div>
 </body>
